--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,7 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  background: #e70011;
+  border-bottom: 2px solid #9e020c;
+  text-align: center;
+  height: 6em;
+  &__wrapper {
+    max-width: 80vw;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100%;
+    .logotype {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #e70011;
+      height: 100%;
+      &__center {
+        border: 5px solid white;
+        border-radius: 30px;
+        padding: 0 0.5em;
+        padding-top: 0.2em;
+        color: white;
+        text-align: center;
+        height: 4em;
+        h1 {
+
+        }
+
+      }
+    }
+    &__nav {
+      display: flex;
+      justify-content: space-between;
+      margin-left: auto;
+      &__item {
+        text-decoration: none;
+        color: white;
+        width: 8em;
+        transition: 0.3s;
+        &:hover {
+          color: black;
+        }
+      }
+    }
+  }
+}
+
+main {
+  max-width: 80vw;
+  margin: auto;
+  margin-top: 5em;
+  margin-bottom: 20px;
+  .game-series-title {
+    margin: 1em 0;
+    text-align: center;
+  }
 }
 
 .card-image {
@@ -10,10 +75,13 @@
 
 .game-series-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   max-width: 80vw;
   margin: auto;
   gap: 2em;
+  @media(min-width:1200px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
   &__card {
     text-decoration: none;
     padding: 2em 0;
@@ -22,13 +90,56 @@
     align-items: center;
     justify-content: space-between;
     text-align: center;
-    background-color: red;
-    span {
-      color: white;
-    }
+    background-color: #e70011;
+    color: white;
+    font-weight: 600;
+    transition: 0.3s;
+    border-radius: 5px;
+    -webkit-box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
+    box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
     img {
       max-height: 10em;
       flex-grow: 1;
+      max-width: 99%;
+
+    }
+    &:hover {
+      background: #880219;
+    }
+  }
+}
+
+.details {
+  max-width: 80vw;
+  margin: 2em auto;
+  &__container {
+    padding: 2em 0;
+    max-width: 70vw;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background: #e70011;
+    color: white;
+    border-radius: 10px;
+    -webkit-box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
+    box-shadow: 10px 9px 16px -6px rgba(0,0,0,0.75);
+    img {
+      display: block;
+      max-height: 20em;
+    } 
+    &__content {
+      h2 {
+        font-size: 3em;
+        margin-bottom: 10px;
+      }
+      table {
+        text-align: left;
+        width: 20em;
+      }
     }
   }
 }
